# simc-simple

./: .gitignore  pyproject.toml  simc_simple.py
docs/: guide.txt  products.txt
src/simc/: ingest.py  output.py  prep.py
src/simc_simple/: ingest.py  main.py  output.py  prep.py  sim.py
