[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simc_simple"
version = "0.2"
description = "Simplified fork of Multi-planet surface clutter simulation, now intended only for Earth"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Joseph MacGregor, original author: Michael Christoffersen"},
    {email = "joseph.a.macgregor@nasa.gov, original author: mchristo28@gmail.com"}]
dependencies = [
    "argparse",
    "configparser",
    "numpy",
    "pandas",
    "rasterio",
    "pyproj",
    "tqdm"]
    
[project.urls]
repository = "https://github.com/Snow4Flow/simc_simple"

[project.scripts]
simc_simple = "simc_simple.main:main"